--- a/styles/style.scss
+++ b/styles/style.scss
@@ -60,6 +60,7 @@ body {
         line-height: 2em;
         width: 100%;
         text-align: center;
+        border: none;
     }
     ::placeholder {
         text-align: center;
