--- a/styles/style.css
+++ b/styles/style.css
@@ -181,7 +181,7 @@ li {
 #resultats ul li.true::after, .patinoire ul li.true::after {
   content: "";
   display: block;
-  background-image: url(../img/ic_check.svg);
+  background-image: url("../img/ic_check.svg");
   background-size: contain;
   background-repeat: no-repeat;
   height: 1em;
@@ -191,7 +191,7 @@ li {
 #resultats ul li.false::after, .patinoire ul li.false::after {
   content: "";
   display: block;
-  background-image: url(../img/ic_close.svg);
+  background-image: url("../img/ic_close.svg");
   background-size: contain;
   background-repeat: no-repeat;
   height: 1em;
@@ -228,19 +228,6 @@ li {
           transform: rotate(-90deg);
   color: white;
   background-size: contain;
-}
-
-footer a {
-  display: inline-block;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  content: "";
-  background: url(../img/home.svg) no-repeat;
-  background-size: contain;
-  width: 2em;
-  height: 2em;
-  padding-bottom: 1em;
 }
 
 @media only screen and (max-width: 400px) {
